# rust-graphql

./: .env  .gitignore  Cargo.toml
migrations/2022-11-03-052308_create_users/: up.sql
src/: collectors.rs  context.rs  database.rs  graphql.rs  loaders.rs  main.rs  models.rs  mutations.rs  mutators.rs  queries.rs  schema.rs
