[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-lab = "0.18.5"
dataloader = "0.16.0"
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["postgres", "uuid", "r2d2"] }
dotenvy = "0.15.6"
futures = "0.3.25"
juniper = "0.15.10"
serde = "1.0.147"
serde_json = "1.0.87"
uuid = { version = "0.8.2", features = ["v4"] }

[[bin]]
name = "rust-graphql"
path = "src/main.rs"
edition = "2021"
